frontend/test/should_fail/computations_decl_use_returns_type_mismatch_003.grg
using model_init;

function func(var d:double) : int
{
	return(d);
}

